# OpenStylus

./: .gitignore  Cargo.toml  README.md  key.txt
ABDK_Maths_libraries for Stylus/: abdk.rs  abdk_float.rs
ABDK_libraries/: abdk.rs
ERC20/: Cargo.toml
Fast Fourier Transform/: Cargo.toml
Fast Fourier Transform/src/: ITrig.sol  Trig.sol  trig.rs
Metatransactions ERC4337/: Cargo.toml
Metatransactions ERC4337/src/: BaseAccount.rs  EntryPoint.rs  Exec.rs  Helpers.rs  NonceManager.rs  SenderCreator.rs  StakeManager.rs  UserOperation.rs
erc1155/: Cargo.toml
erc1155/src/: erc1155.rs  lib.rs
erc20/: Cargo.toml
erc4626/: Cargo.toml
erc4626/src/: erc20.rs  lib.rs  main.rs
erc6909/: Cargo.toml
erc6909/src/: lib.rs
erc721/: Cargo.toml
erc721/src/: erc721.rs  lib.rs  main.rs
src/: ITrig.sol  fourier.rs  lib.rs  main.rs  trig.rs
weth/: Cargo.toml
weth/src/: lib.rs
